kubernetes/apps/home/emqx/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-dashboard
spec:
  hostnames: ["emqx.jonandlinz.io"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
   - backendRefs:
      - name: emqx-dashboard
        namespace: home
        port: 18083
